[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["William Jamir Silva <williamjamir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
[tool.poetry.dependencies.aiocache]
git = "https://github.com/aio-libs/aiocache.git"
rev = "5857064e2bd39d818af0764fcf8515a1402f4a48"
extras = [
    "redis",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
