[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["William Jamir Silva <williamjamir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
[tool.poetry.dependencies.aiocache]
git = "https://github.com/aio-libs/aiocache.git"
rev = "7a6fe3a85f97561c1a01a103b73e10af7165bc6a"
extras = [
    "redis",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
