[tool.poetry]
name = "test1"
version = "0.1.0"
description = ""
authors = ["William Jamir Silva <williamjamir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
[tool.poetry.dependencies.aiocache]
git = "https://github.com/aio-libs/aiocache.git"
rev = "f3d463f080a2c4ca4e392d3889b29054d45a49f1"
extras = [
    "redis",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
